--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ rel="stylesheet">
       <p>Let's create a space where we both feel at home</p>
     </div>
     <div class = "main__img--container">
-      <img src="/images/pic1.svg" alt="pic" id="main__img">
+      <img src="/images/pic1.svg" alt="pic" id="pic1__images">
     </div> 
   </div>
 </div>
