--- a/index.html
+++ b/index.html
@@ -1,25 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>My Portfolio</title>
-<link rel="stylesheet" href="style.css" /> 
-<link rel="stylesheet" href="mediaqueries.css" /> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Roomate Finder</title>
+    <link rel="stylesheet" href="styles.css" />
+    
+    <link href="/index" />
+
+    <link 
+    rel="stylesheet" 
+    href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+    integrity="sha384-HzLeBuhoNPv5l5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIga2w1L0Xbgc" 
+    crossorgin="'anonymous"
+    />
+<link href="https://fonts.googleapis.com/css2?family=kumbh
++Sans:wght@400;700&display=swap" 
+rel="stylesheet">
+
 </head>
 <body>
-    <nav id="desktop.nav">
-       <div class ="logo">Ashley Gutierrez Carreto </div> 
-       <div>
-        <ul class="nav- links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-       </div>
-    </nav>
-    <script src="script.js"></script>
+<nav class="navbar">
+  <div class="navbar__container">
+    <a href="/" id="navbar__logo">
+      <i class="fas.fa-gem"></i> Co-Habitat 
+    </a>
+    <div class="navbar_toggle" id="mobilemenu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+    <ul class="navbar__menu">
+      <li class="navbar__item">
+      <a href="/" class="navbar__links"> Home </a>
+    </li>
+    <li class="navbar__item">
+      <a href="usertheroomie.html" class="navbar__links"> Potential Roomie </a>
+    </li>
+    <ul class="navbar__menu">
+      <li class="navbar__item">
+        <a href="userlookingfor.html" class="navbar__links">Seeking a Roomie</a>
+      </li>
+      <ul class="navbar__btn">
+        <li class="navbar__item">
+          <a href="/" class="button"> Sign Up </a></li>
+        </u1>
+  </div>
+</nav>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Example</title>
+</head>
+<body>
+
 </body>
 </html>
+
+
+
+<!-- Hero Section-->
+<div class="main">
+  <div class="main__container">
+    <div class="main__content">
+      <h1>Welcome to</h1>
+      <h2>Co-Habitat!</h2>
+      <p>Let's create a space where we both feel at home</p>
+    </div>
+    <div class = "main__img--container">
+      <img src="/images/pic1.svg" alt="pic" id="main__img">
+    </div> 
+  </div>
+</div>
+
+
+
+<!-- Services Section-->   
+<div class="services">
+  <h1> Roomies United: Where Connections Begin at Home </h1>
+  <div class="services_container">
+    <div class="services__card">
+      <img src="/images/image1 Small.jpeg" alt="pic2" id="main__img2">
+    </div>
+    <div class="services__card">
+      <!-- <h2>Are your ready?</h2> -->
+    </div>
+  </div>
+</div>
+
+<!--Footer Section-->
+<div class="footer__container">
+  <div class="footer__links">
+    <div class="footer__link--wrapper">
+      <div class="footer__link--items">
+        <h2>About Us</h2>
+        <a href="/">How it works</a>
+        <a href="/">Creators</a>
+        <a href="/">Terms of Service</a>
+        
+      </div>
+      <div class="footer__link--items">
+        <h2>Contact Us</h2>
+        <a href="/">Contact</a>
+        <a href="/">Support</a>
+        <a href="/">Destinations</a>
+        <a href="/">Sponsors</a>
+      </div>
+    </div>
+    <div class="footer__link--wrapper">
+      <div class="footer__link--items">
+        <h2>Videos</h2>
+        <a href="/">Submit Video</a>
+        <a href="/">Agency</a>
+        <a href="/">Influencer</a>
+      </div>
+      <!-- <div class="footer__link--items">
+        <h2>Social Media</h2>
+        <a href="/">Instagram</a>
+        <a href="/">Facebook</a>
+        <a href="/">Linkedin</a>
+        <a href="/">Youtube</a>
+        <a href="/">Twitter</a>
+      </div> -->
+    </div>
+  </div>
+  <div class="social__media">
+    <div class="social__media--wrap">
+      <div class="footer__logo">
+        <a href="/" id="footer__logo"><i class="fas 
+          fa-gem"></i> Co Habitat </a>
+      </div>
+      <p class="website__rights">Co Habitat 2024. All rights 
+        reserved</p>
+      <!-- <div class="social__icons">
+        <a href="/" class="social__icon--link" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="/" class="social__icon--link" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="/" class="social__icon--link" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="/" class="social__icon--link" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="/" class="social__icon--link" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a> -->
+      </div>
+    </div>
+  </div>
+</div>
+<script src="app.js"></script>
+</body>
+</html>
+  
+
+
