--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     rel="stylesheet" 
     href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPv5l5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIga2w1L0Xbgc" 
-    crossorgin="'anonymous"
+    crossorgin="anonymous"
     />
 <link href="https://fonts.googleapis.com/css2?family=kumbh
 +Sans:wght@400;700&display=swap" 
-rel="stylesheet">
+ crossorgin="anonymous"
+rel="stylesheet"
+    />
 
 </head>
 <body>
