--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ rel="stylesheet"
       <p>Let's create a space where we both feel at home</p>
     </div>
     <div class = "main__img--container">
-      <img src="/images/pic1.svg" alt="pic" id="main__img">
+      <img src="./images/pic1.svg" alt="pic" id="main__img">
     </div> 
   </div>
 </div>
@@ -86,7 +86,7 @@ rel="stylesheet"
   <h1> Roomies United: Where Connections Begin at Home </h1>
   <div class="services_container">
     <div class="services__card">
-      <img src="/images/image1 Small.jpeg" alt="pic2" id="main__img2">
+      <img src="./images/image1 Small.jpeg" alt="pic2" id="main__img2">
     </div>
     <div class="services__card">
       <!-- <h2>Are your ready?</h2> -->
