--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ rel="stylesheet"
   <h1> Roomies United: Where Connections Begin at Home </h1>
   <div class="services_container">
     <div class="services__card">
-      <img src="./images/image1 Small.jpeg" alt="pic2" id="main__img2">
+      <img src="./image1 Small.jpg" alt="pic2" id="main__img2">
     </div>
     <div class="services__card">
       <!-- <h2>Are your ready?</h2> -->
