--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ rel="stylesheet"
       <p>Let's create a space where we both feel at home</p>
     </div>
     <div class = "main__img--container">
-      <img src="./images/pic1.svg" alt="pic" id="main__img">
+      <img src="./pic1.jpg" alt="pic" id="main__img">
     </div> 
   </div>
 </div>
